amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-fields-input-type-extension.api.federation.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-fields-input-type-extension.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 1

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#duplicated-field
  Message: Cannot exist two or more fields with name 'anotherRandomText'
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-fields-input-type-extension.api.graphql#/declares/shape/InputType
  Property: http://www.w3.org/ns/shacl#property
  Range: [(5,0)-(8,1)]
  Location: 
